recursion.cons.nfirst.Nfirst.scala.error
Erreur de compilation :
Nfirst:5: error: value :: is not a member of Int
    return l::l.head
            ^